# sqlit

./: CONTRIBUTING.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
config/: settings.template.json
extras/nvim/: README.md
extras/nvim/lua/sqlit/: init.lua
extras/nvim/plugin/: sqlit.lua
sqlit/: commands.py  config.py
sqlit/core/: binding_contexts.py  input_context.py  keymap.py
sqlit/db/: __init__.py  providers.py  schema.py
sqlit/db/adapters/: __init__.py  base.py  firebird.py  mysql.py
sqlit/domains/connections/app/: persist_utils.py
sqlit/domains/connections/domain/: config.py
sqlit/domains/connections/providers/flight/: provider.py
sqlit/domains/connections/providers/motherduck/: adapter.py  provider.py  schema.py
sqlit/domains/connections/store/: connections.py
sqlit/domains/connections/ui/: connection_error_handlers.py  restart_cache.py
sqlit/domains/connections/ui/mixins/: connection.py
sqlit/domains/connections/ui/screens/: connection.py
sqlit/domains/connections/ui/screens/connection_picker/: screen.py  shortcuts.py
sqlit/domains/connections/ui/screens/connection_picker/tabs/: connections.py  docker.py
sqlit/domains/explorer/app/: schema_service.py
sqlit/domains/explorer/domain/: tree_nodes.py
sqlit/domains/explorer/state/: __init__.py  tree_focused.py  tree_multi_select.py  tree_on_connection.py  tree_on_database.py  tree_on_folder.py  tree_on_object.py  tree_on_table.py  tree_visual_mode.py
sqlit/domains/explorer/ui/mixins/: tree.py  tree_labels.py
sqlit/domains/explorer/ui/tree/: builder.py  db_switching.py  expansion_state.py  loaders.py  schema_render.py
sqlit/domains/query/app/: alerts.py  multi_statement.py  transaction.py
sqlit/domains/query/state/: query_normal.py
sqlit/domains/query/store/: memory.py
sqlit/domains/query/ui/mixins/: query_editing_comments.py  query_editing_cursor.py  query_editing_operators.py  query_execution.py
sqlit/domains/results/state/: __init__.py  results_focused.py  value_view_active.py
sqlit/domains/results/ui/mixins/: results.py
sqlit/domains/results/ui/screens/: value_view.py
sqlit/domains/shell/app/: main.css  main.py  startup_flow.py
sqlit/domains/shell/app/commands/: __init__.py  alert.py  debug.py
sqlit/domains/shell/state/: machine.py  main_screen.py
sqlit/domains/shell/ui/mixins/: ui_navigation.py  ui_status.py
sqlit/services/: cancellable.py  docker_detector.py
sqlit/shared/app/: runtime.py
sqlit/shared/ui/: widgets_json_tree.py  widgets_value_view.py
sqlit/shared/ui/protocols/: query.py
sqlit/ui/: connection_error_handlers.py
sqlit/ui/mixins/: tree.py  tree_filter.py
tests/: conftest.py  helpers.py  test_credentials_connection_store.py  test_firebird.py
tests/integration/: test_duckdb_expanded_tables.py  test_explorer_refresh_cursor.py  test_explorer_refresh_duckdb_cursor.py
tests/ui/: test_json_tree.py  test_multi_select_actions.py  test_query_history.py
tests/ui/explorer/: test_multidb_refresh.py  test_refresh_cursor_restore.py  test_refresh_expanded_loads.py
tests/ui/keybindings/: test_contextual.py  test_state_machine.py
tests/unit/: test_auto_reconnect_after_driver_install.py  test_comments.py  test_connection_config_from_dict.py  test_connection_picker_refresh.py  test_motherduck_adapter.py  test_query_alerts.py
