[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlit-tui"
version = "0.5.1"
description = "A terminal UI for SQL Server, PostgreSQL, MySQL, SQLite, Oracle, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Peter" }
]
keywords = ["sql", "server", "tui", "database", "mssql", "postgresql", "mysql", "sqlite", "oracle", "firebird", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "textual[syntax]>=6.10.0",
    "textual-fastdatatable>=0.14.0",
    "pyperclip>=1.8.2",
    "keyring>=24.0.0",
    "docker>=7.0.0",  # Docker container auto-detection (lazy loaded)
]

[project.optional-dependencies]
all = [
    "psycopg2-binary>=2.9.0",
    "pyodbc>=5.0.0",
    "mysql-connector-python>=9.1.0",  # min avoids known CVEs
    "mariadb>=1.1.0",
    "oracledb>=2.0.0",
    "duckdb>=1.1.0",  # min avoids known CVEs
    "clickhouse-connect>=0.7.0",
    "requests>=2.32.4",  # min avoids known CVEs
    "libsql-client>=0.1.0",
    "firebirdsql>=1.3.5",
    "sshtunnel>=0.4.0",
    "paramiko>=2.0.0,<4.0.0",
]
postgres = ["psycopg2-binary>=2.9.0"]
cockroachdb = ["psycopg2-binary>=2.9.0"]
mssql = ["pyodbc>=5.0.0"]
mysql = ["mysql-connector-python>=9.1.0"]  # min avoids known CVEs
mariadb = ["mariadb>=1.1.0"]
oracle = ["oracledb>=2.0.0"]
duckdb = ["duckdb>=1.1.0"]  # min avoids known CVEs
clickhouse = ["clickhouse-connect>=0.7.0"]
d1 = ["requests>=2.32.4"]  # min avoids known CVEs
turso = ["libsql-client>=0.1.0"]
firebird = ["firebirdsql>=1.3.5"]
ssh = [
    "sshtunnel>=0.4.0",
    "paramiko>=2.0.0,<4.0.0",
]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "Faker>=28.0",
    "build",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[project.scripts]
sqlit = "sqlit.cli:main"

[project.urls]
Homepage = "https://github.com/Maxteabag/sqlit"
Repository = "https://github.com/Maxteabag/sqlit"
Issues = "https://github.com/Maxteabag/sqlit/issues"

[tool.hatch.build.targets.wheel]
packages = ["sqlit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "sqlite: SQLite database tests",
    "mssql: SQL Server database tests",
    "postgresql: PostgreSQL database tests",
    "mysql: MySQL database tests",
    "oracle: Oracle database tests",
    "firebird: Firebird database tests",
    "clickhouse: ClickHouse database tests",
    "asyncio: async tests",
    "integration: integration tests (may require external services)",
]

[tool.coverage.run]
source = ["sqlit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
strict_optional = true
exclude = ["tests/"]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "mysql.connector",
    "mariadb",
    "oracledb",
    "duckdb",
    "clickhouse_connect",
    "libsql_client",
    "sshtunnel",
    "docker",
    "docker.errors",
    "pyarrow",
    "textual_fastdatatable"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyodbc"
ignore_missing_imports = true
